Fix Thumbnail in detail looking a bit off-center

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -232,6 +232,7 @@ section {
     overflow: hidden;
     border-radius: 50%;
     box-sizing: border-box;
+    margin-left: 2.4rem;
   }
 
   &--close {
